--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npm run build && node dist/server.js",
-    "dev": "nodemon --watch src --loader ts-node/esm --exec node src/server.ts"
+    "start": "node dist/server.js",
+    "dev": "npm run build && nodemon --watch src --ext ts --exec \"npm run start\""
   },
   "keywords": [],
   "author": "",
@@ -25,6 +24,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
