--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",              // Certifique-se de que está como ESNext
-    "moduleResolution": "node",      // Para resolução de módulos compatível com Node.js
-    "outDir": "./dist",
+    "moduleResolution": "node", 
+    "target": "ES2020",             // Define a versão de saída do JavaScript
+    "module": "ESNext",           // Garante que o Node.js entenda os módulos
+    "outDir": "./dist",             // Pasta onde os arquivos compilados serão salvos
+    "rootDir": "./src",             // Onde estão os arquivos `.ts` originais
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts"],  // Inclui os arquivos da pasta src
+  "exclude": ["node_modules"]  // Exclui node_modules da compilação
 }
