--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mobile-api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "npm run build && node dist/server.js",
     "dev": "npm run build && nodemon --watch src --ext ts --exec \"npm run start\""
   },
   "keywords": [],
@@ -13,13 +13,16 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2"
   },
   "type": "module",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
