--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.ts",
   "scripts": {
     "build": "npx tsc",
-    "start": "npm run build && node dist/server.js",
+    "start": "node dist/server.js",
     "dev": "npm run build && nodemon --watch src --ext ts --exec \"npm run start\""
   },
   "keywords": [],
